# Smart-Condominium

./: chat.py  config.py  pyproject.toml
condominio/: __init__.py  config.py  pyproject.toml  requirements.txt  run.py  smart_condominium.py
condominio/bd/: smart_condominium.sql
condominio/data/: artigos.json
condominio/migrations/: env.py
condominio/migrations/versions/: 47d5110d497d_.py  7cecea9733f2_.py  99a4e0cf7f29_renomear_coluna_usuario_para_cpf_cnpj.py
condominio/models/: condominio_model.py  morador_model.py  veiculo_model.py
condominio/projeto/: __init__.py
condominio/projeto/models/: usuario.py
condominio/static/css/: cadastr_unit.css  cadastro_condominio.css  cadastros.css  chat.css  cobranca.css  condominio.css  estilo.css  forum.css  home.css  inicio.css  inicio2.css  menu.css  recados.css  teste_paginacao.css  todas_cobrancas.css
condominio/static/js/: cadastro_condominio.js  chat.js  forum.js  inicio.js  recados.js  scripts.js  suporte.js  tabelas.js  teste_paginacao.js
condominio/templates/: cadastro_condominio.html  cadastro_funcionario.html  cadastro_morador.html  cadastro_unit.html  cadastro_veiculo.html  chat.html  cobranca.html  condominio.html  fazer_reservas.html  funcionarios.html  home.html  index.html  index1.html  login.html  menu.html  recados.html  reservas.html  residents.html  resultados.html  sobre.html  template.html  todas_cobrancas.html  units.html  veiculo.html
condominio/views/: condominio_views.py  morador_views.py  veiculo_views.py  views.py
condominio/views/__pycache__/: chat.py
(+3 files in other folders)
